[package]
name = "color-ls"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple ls implementation in Rust with color support"
categories = ["command-line-utilities"]
keywords = ["cli", "filesystem", "ls", "directory"]


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
structopt = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "ls"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
